--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,23 +12,24 @@
                id="hour-{{i}}">{{ hour.time }}</div>
         </div>
 
-        <div *ngFor="let day of days" class="day-header" [ngStyle]="{'display': day === 'skip' ? 'none' : 'block'}">{{ day }}</div>
+        <div *ngFor="let day of days" class="day-header" [ngStyle]="{'display': day.desc === 'skip' ? 'none' : 'block'}">{{ day.desc }}</div>
 
         <ng-container *ngFor="let hour of hours">
             <div *ngFor="let day of days; let dayIndex = index;" 
                  class="yews-calendar-cell" 
-                 [ngStyle]="{'border': day === 'skip' ? 'none' : '1px solid #ccc'}"
-                 (click)="hour.activeHour && addEvent(day, hour.time)">
+                 [ngStyle]="{'border': day.desc === 'skip' ? 'none' : '1px solid #ccc'}"
+                 (click)="hour.activeHour && addEvent(day.desc, hour.timeWholeNumber)">
                  <div class="cell-box" 
                     [ngStyle]="{
-                        'background-color': !hour.activeHour && dayIndex > 0 ? '#f0f0f0' : 'transparent',
+                        'background-color': !hour.activeHour && day.activeDay ? '#f0f0f0' : 'transparent',
                         'width': '100%',
                         'height': '100%'
                     }">
-                    <div class="event" 
-                        *ngIf="events[day + '-' + hour.time]">
-                        {{ events[day + '-' + hour.time] }}
-                    </div>
+                    <ng-container *ngIf="checkForEvent(day.desc, hour.time) as event">
+                        <div class="event">
+                            {{ event.title }}
+                        </div>
+                    </ng-container>
                 </div>
             </div>
         </ng-container>
